# agents-assemble-discharge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  STATUS.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
agents/careplan/: agent.py  app.py  prompts.py  tools.py
agents/followup/: agent.py  app.py  prompts.py  tools.py
agents/medrecon/: agent.py  app.py  prompts.py  tools.py
agents/orchestrator/: agent.py  app.py  prompts.py  tools.py
docs/: PLATFORM_INTEGRATION.md
fhir_server/: main.py  routes.py
registration/: orchestrator-card.template.json
scripts/: deploy.sh  phi_guard.py  register_agent.sh  simulate_promptopinion.py  test_e2e.py
shared/: a2a_helpers.py  app_factory.py  fhir_client.py  fhir_hook.py  guardrails.py  logging_utils.py  middleware.py  schemas.py
synthetic_data/: patient-001.json  patient-002.json  patient-003.json
tests/: test_careplan.py  test_fhir_server.py  test_followup.py  test_integration.py  test_medrecon.py  test_orchestrator.py
